making pickers awesome

--- a/contrib/cms/conduit/templates/admin/conduit/dynamicpicker/change_form.html
+++ b/contrib/cms/conduit/templates/admin/conduit/dynamicpicker/change_form.html
@@ -16,8 +16,14 @@
               
         var picker_form = new Pickers();        
         
+        //load the appropriate filter sets
         jQuery.getJSON(load_filters_url, get_args, function(data) { picker_form.process_available(data); });
         
+        
+        //override the save method to bundle up the filters correctly
+        jQuery("#dynamicpicker_form").submit(function() {
+            return picker_form.bundle_filters();
+    });
     });
 </script>
 {% endblock %}
