story archives and better dynamic pickers

--- a/contrib/cms/conduit/templates/admin/conduit/dynamicpicker/change_form.html
+++ b/contrib/cms/conduit/templates/admin/conduit/dynamicpicker/change_form.html
@@ -25,6 +25,11 @@
             return picker_form.bundle_filters();
         });
     });
+    
+    /*
+    {% for error in errors %}
+    {{error}}
+    */
 </script>
 {% endif %}
 {% endblock %}
