performance tuning newsengine admin

--- a/contrib/cms/conduit/templates/admin/conduit/dynamicpicker/change_form.html
+++ b/contrib/cms/conduit/templates/admin/conduit/dynamicpicker/change_form.html
@@ -27,9 +27,7 @@
     });
     
     /*
-    {% for error in errors %}
-    {{error}}
-    {% endfor %}
+    {{errors}}
     */
 </script>
 {% endif %}
