cleaning up cache key names and trying to fix dp issues

--- a/contrib/cms/conduit/templates/admin/conduit/dynamicpicker/change_form.html
+++ b/contrib/cms/conduit/templates/admin/conduit/dynamicpicker/change_form.html
@@ -8,7 +8,7 @@
         var path = jQuery.makeArray(window.location.pathname.split("/"));
         
         var picker_id = {{ object_id }};
-        var content_id = {{ original.content.id }}
+        var content_id = {{ original.content.id }};
     
         var load_filters_url = "{% url admin:conduit-picking-filters-fields %}";
         
