trying to fix dynamic picker admin errors

--- a/contrib/cms/conduit/templates/admin/conduit/dynamicpicker/change_form.html
+++ b/contrib/cms/conduit/templates/admin/conduit/dynamicpicker/change_form.html
@@ -27,7 +27,13 @@
     });
     
     /*
-    {{form.non_field_errors}}
+    global errors:
+    {{errors}}
+    
+    non field errors:
+    {{adminform.form.non_field_errors}}
+    
+    
     */
 </script>
 {% endif %}
