--- a/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
+++ b/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
@@ -10,7 +10,7 @@
             {% trans "View on site" %}</a>
         </li>
     {% endif%}
-    <li><a href="{% admin:newsengine-article-preview %}" class="viewsitelink">Preview</a>
+    <li><a href="{% url admin:newsengine-article-preview %}" class="viewsitelink">Preview</a>
   </ul>
 {% endif %}{% endif %}
 
