--- a/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
+++ b/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
@@ -1,5 +1,7 @@
 {% extends "admin/change_form.html" %}
+
 {% load i18n %}
+
 {% block object-tools %}
 {% if change %}{% if not is_popup %}
   <ul class="object-tools">
@@ -13,5 +15,43 @@
   </ul>
 {% endif %}{% endif %}
 
-{{ form.errors }}
+{% endblock %}
+
+{% block extrahead %}
+{{ block.super }}
+{% if object_id and original %}
+<script type="text/javascript">
+    jQuery(document).ready(function() {
+        var path = jQuery.makeArray(window.location.pathname.split("/"));
+        
+        var picker_id = {{ object_id }};
+        var content_id = {{ original.content.id }};
+    
+        var load_filters_url = "{% url admin:conduit-picking-filters-fields %}";
+        
+        var get_args = {'content_id': content_id, 'picker_id': picker_id};
+              
+        var picker_form = new Pickers();        
+        
+        //load the appropriate filter sets
+        jQuery.getJSON(load_filters_url, get_args, function(data) { picker_form.process_available(data); });
+        
+        
+        //override the save method to bundle up the filters correctly
+        jQuery("#dynamicpicker_form").submit(function() {
+            return picker_form.bundle_filters();
+        });
+    });
+    
+    /*
+    global errors:
+    {{errors}}
+    
+    non field errors:
+    {{adminform.form.non_field_errors}}
+    
+    
+    */
+</script>
+{% endif %}
 {% endblock %}
