--- a/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
+++ b/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
@@ -33,9 +33,9 @@
 </script>
 {% else %}
 <script type="text/javascript">
-    jQuery(document).ready(function() {
+    django.jQuery(document).ready(function() {
         //override the save method to bundle up the filters correctly
-        jQuery(".add-row > a").click();
+        django.jQuery(".add-row > a").click();
     });
 </script>
 
