--- a/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
+++ b/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
@@ -35,7 +35,7 @@
 <script type="text/javascript">
     django.jQuery(document).ready(function() {
         //override the save method to bundle up the filters correctly
-        django.jQuery(".add-row > a").click();
+        django.jQuery(".add-row > a").trigger("click");
     });
 </script>
 
