--- a/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
+++ b/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
@@ -24,7 +24,7 @@
         var preview_url = "{% url admin:newsengine-article-preview %}";
         var preview_button = "<input type='submit' value='Preview' class='preview' name='_preview'/>";
         
-        jQuery(".submit-row input").filter(":first").prepend(preview_button);
+        jQuery(".submit-row input").filter(":first").append(preview_button);
     });
     
 </script>
