dynamic picker admin betterness

--- a/contrib/cms/conduit/templates/admin/conduit/dynamicpicker/change_form.html
+++ b/contrib/cms/conduit/templates/admin/conduit/dynamicpicker/change_form.html
@@ -25,6 +25,11 @@
             return picker_form.bundle_filters();
         });
         {% endcomment %}
+        $(document).bind('filter_id_update', function (e, id) {
+            if (window.console && console.log) {
+                console.log('id', id);
+            }
+        });
     });
     
 </script>
