dynamic picker admin betterness

--- a/contrib/cms/conduit/templates/admin/conduit/dynamicpicker/change_form.html
+++ b/contrib/cms/conduit/templates/admin/conduit/dynamicpicker/change_form.html
@@ -30,7 +30,7 @@
             var form_field = jQuery("#"+id);
             if (form_field.is('select') && form_field.attr('multiple') == 'multiple' && form_field.attr('class') == 'selectfilter') 
             {
-                SelectFilter.init(id, form_field.attr('name') , 0, "{{ STATIC_URL}}admin/");
+                //SelectFilter.init(id, form_field.attr('name') , 0, "{{ STATIC_URL}}admin/");
             }
         });
             
