--- a/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
+++ b/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
@@ -34,7 +34,7 @@
         }
 
         //handle the addition of inlined media
-        jQuery("input[name$='_inlines']").bind('change', function(e) {
+        jQuery("input[name$='_inlines']").live('change', function(e) {
            console.log(this);
         });
 
