--- a/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
+++ b/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
@@ -8,8 +8,16 @@
     original_dismissRelatedLookupPopup = window.dismissRelatedLookupPopup;
 
     window.dismissRelatedLookupPopup = function (win, chosenId) {
-        console.log(win.name);
-        original_dismissRelatedLookupPopup.apply(this, arguments);
+        var name = windowname_to_id(win.name);
+        var elem = document.getElementById(name);
+        if (elem.className.indexOf('vManyToManyRawIdAdminField') != -1 && elem.value) {
+            elem.value += ',' + chosenId;
+        } else {
+            document.getElementById(name).value = chosenId;
+        }
+        win.close();
+        elem.change();
+        //original_dismissRelatedLookupPopup.apply(this, arguments);
     };
 
 
