--- a/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
+++ b/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
@@ -11,9 +11,9 @@
         var name = windowname_to_id(win.name);
         var elem = document.getElementById(name);
         original_dismissRelatedLookupPopup.apply(this, arguments);
-        elem.change();
+        console.log(elem);
     };
-    
+
     jQuery(document).ready(function() {
         //handle preview button
         var original_action = jQuery("form#article_form").attr('action');
