--- a/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
+++ b/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
@@ -11,7 +11,7 @@
         var name = windowname_to_id(win.name);
         var elem = document.getElementById(name);
         original_dismissRelatedLookupPopup.apply(this, arguments);
-        console.log(elem);
+        elem.trigger("change");
     };
 
     jQuery(document).ready(function() {
