article editing -- overriding django admin RelatedObjectLookups.js

--- a/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
+++ b/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
@@ -43,7 +43,7 @@
         }
 
         //handle the addition of inlined media
-        jQuery("input[name$='_inlines']").live("change", function(e) {
+        jQuery("input[name$='_inlines']").live("change textInput", function(e) {
                 console.log(this);
         });
 
