--- a/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
+++ b/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
@@ -17,7 +17,7 @@
     jQuery(document).ready(function() {
         var preview_url = "{% url admin:newsengine-article-preview %}";
         jQuery().ArticlePreview(preview_url); //simple plugin which generates preview button
-        jQuery("input[name$='_inlines']").RenassainceTagGenerator(); //generates renaissance inline tags
+        jQuery("input[name$='_inlines']").RenaissanceTagGenerator(); //generates renaissance inline tags
 
         //handle article translations
         var inline_formsets = "{{ inline_admin_formsets.0.formset.total_form_count|default_if_none:'1' }}";
