--- a/contrib/cms/newsengine/templates/admin/newsengine/article/preview.html
+++ b/contrib/cms/newsengine/templates/admin/newsengine/article/preview.html
@@ -6,7 +6,7 @@
         <h1>Article Preview</h1>
         {% for translation in translations %}
         <h2>{{ translation.language }}</h2>
-        <div style="width:617px; padding:10px">
+        <div style="width:617px; padding:10px; border:1px solid;">
         <h3>{{ translation.headline }}</h3>
         <h4>{{ translation.sub_headline }}</h4>
         <p class="synposis">
