--- a/contrib/cms/newsengine/templates/admin/newsengine/article/preview.html
+++ b/contrib/cms/newsengine/templates/admin/newsengine/article/preview.html
@@ -6,12 +6,18 @@
         <h1>Article Preview</h1>
         {% for translation in translations %}
         <h2>{{ translation.language }}</h2>
-        <div style="width:617px; padding:10px; border:1px solid;">
         <h3>{{ translation.headline }}</h3>
         <h4>{{ translation.sub_headline }}</h4>
+        <div style="width:617px; padding:10px; border:1px solid;">
         <p class="synposis">
+            {% if translation.synopsis %}
             {{ translation.synopsis|markdown }}
+            {% else %}
+            <em>NO SYNOPSIS</em>
+            {% endif %}
         </p>
+        </div>
+        <div style="width:617px; padding:10px; border:1px solid;">
         <p class="body">
             {% render_article_translation article translation %}
         </p>
