--- a/contrib/cms/newsengine/templates/admin/newsengine/article/preview.html
+++ b/contrib/cms/newsengine/templates/admin/newsengine/article/preview.html
@@ -11,7 +11,7 @@
         {% if translation.synopsis %}
             <p class="synposis">{{ translation.synopsis|markdown }}</p>
             {% else %}
-            <p style="text-align:center; color:#aaa;"><em>no synposis</em></p>
+            <p style="text-align:center; color:#aaa;"><em>no synopsis</em></p>
         {% endif %}
         </div>
         <div style="width:617px; padding:10px; border:1px solid;">
