--- a/contrib/cms/toolbar/templates/__cms_toolbar.html
+++ b/contrib/cms/toolbar/templates/__cms_toolbar.html
@@ -1,5 +1,6 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/admin/toolbar.js"></script>
 <script type="text/javascript">
     var admin = {
         'jQuery': jQuery.noConflict()
@@ -7,7 +8,9 @@
 
     (function($) {
         $(document).ready(function() {
-            console.log("initializing admin toolbar");
+
         });
     })(admin.jQuery);
 </script>
+
+<div id="scampi-admintoolbar"></div>
