--- a/contrib/cms/newsengine/templates/newsengine/article.html
+++ b/contrib/cms/newsengine/templates/newsengine/article.html
@@ -1,6 +1,6 @@
 {% load markup %}
 
 {% filter markdown %}
-    {{ article }}{% for image in article.image_inlines.all %}
+    {{ first_pass }}{% for image in article.image_inlines.all %}
     [{{ image.slug }}]: {{ image.file.url }}{% endfor %}
 {% endfilter %}
