--- a/contrib/cms/renaissance/templates/admin/renaissance/image/change_list.html
+++ b/contrib/cms/renaissance/templates/admin/renaissance/image/change_list.html
@@ -14,6 +14,7 @@
         p#img_preview_popover {
             position: absolute;
             border: 1px solid #999;
+            background-color: white;
         }
     </style>
 {% endblock %}
