image rollover in list view

--- a/contrib/cms/renaissance/templates/admin/renaissance/image/change_list.html
+++ b/contrib/cms/renaissance/templates/admin/renaissance/image/change_list.html
@@ -15,6 +15,7 @@
             position: absolute;
             border: 1px solid #999;
             background-color: white;
+            z-index: 100;
         }
     </style>
 {% endblock %}
