--- a/libscampi/contrib/cms/renaissance/templates/admin/renaissance/image/change_list.html
+++ b/libscampi/contrib/cms/renaissance/templates/admin/renaissance/image/change_list.html
@@ -4,7 +4,7 @@
 
 {% block extrahead %}
     {{ block.super }}
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="{% static "js/libs/jquery/jquery.min.js" %}"></script>
     <script type="text/javascript" src="{% static "admin/js/image_hover.js" %}"></script>
     <script type="text/javascript">
         jQuery(document).ready(function() {
