--- a/libscampi/contrib/cms/toolbar/templates/__cms_toolbar.html
+++ b/libscampi/contrib/cms/toolbar/templates/__cms_toolbar.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/libs/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
 <script type="text/javascript">
     var admin = {
