--- a/libscampi/contrib/cms/newsengine/templates/admin/newsengine/article/preview.html
+++ b/libscampi/contrib/cms/newsengine/templates/admin/newsengine/article/preview.html
@@ -1,23 +1,69 @@
-{% extends "admin/base_site.html" %}
 {% load markup %}
 {% load newsengine_admin %}
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<script src="https://media.azpm.org/master/doc/redesign/js/jquery.js"></script>
+		<script type="text/javascript" src="https://media.azpm.org/intensifier/js/jplayer-2-9-1.js"></script>
+		
+		<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+		
+		<!-- Custom Fonts -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+		<link href='https://fonts.googleapis.com/css?family=Merriweather:400italic,700,300' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic' rel='stylesheet' type='text/css'>		
+		
+		<link rel="stylesheet" href="https://media.azpm.org/ultralaser/css/bootstrap.min.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="https://media.azpm.org/ultralaser/css/ultralaser_min_AQxCM6w.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="https://media.azpm.org/ultralaser/css/audio.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="https://media.azpm.org/ultralaser/css/azpmcharting.css" type="text/css" media="screen" />
+</head>
+
+<body>
 
 {% block content %}
-        {% for translation in translations %}
-        <h1>Article Preview ({{ translation.language }})</h1>
-        <h3>{{ translation.headline }}</h3>
-        <h4>{{ translation.sub_headline }}</h4>
-        <div style="width:617px; padding:10px; border:1px solid; margin-bottom:10px;">
-        {% if translation.synopsis %}
-            <p class="synposis">{{ translation.synopsis|markdown }}</p>
-            {% else %}
-            <p style="text-align:center; color:#aaa;"><em>no synopsis</em></p>
-        {% endif %}
-        </div>
-        <div style="width:617px; padding:10px; border:1px solid;">
-        <p class="body">
-            {% render_article_translation article translation %}
-        </p>
-        </div>
-        {% endfor %}
+{% for translation in translations %}
+<section id="article-header">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<span class="top-tag-row">
+						<ol class="breadcrumb" style="margin-bottom: 5px;">
+						  <li class="active">{{ translation.headline }}</li>
+						</ol>
+						<a name="top"></a>
+					</span>
+					<h1>{{ translation.headline }}</h1>
+					<span class="summary">
+						{{ translation.sub_headline }}
+					</span>
+				</div>
+			</div>
+		</div>
+</section>
+
+<section id="article-body">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-8 col-sm-offset-2">
+					{% render_article_translation article translation %}
+				</div>
+			</div>
+		</div>
+</section>
+{% endfor %}
 {% endblock %}
+
+<!-- JAVASCRIPTS -->
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script type="text/javascript" src="https://media.azpm.org/ultralaser/js/bootstrap.min_GYhIwda.js"></script>
+
+</body>
+</html>
