max-width on preview images

--- a/libscampi/contrib/cms/renaissance/templates/admin/renaissance/image/change_list.html
+++ b/libscampi/contrib/cms/renaissance/templates/admin/renaissance/image/change_list.html
@@ -17,6 +17,10 @@
             border: 1px solid #999;
             background-color: white;
             z-index: 100;
+			max-width:802px;
         }
+		p#img_preview_popover img {
+			max-width:800px;
+		}
     </style>
 {% endblock %}
