Adding a new audio player type to SCAMPI article preview

--- a/libscampi/contrib/cms/newsengine/templates/admin/newsengine/article/preview.html
+++ b/libscampi/contrib/cms/newsengine/templates/admin/newsengine/article/preview.html
@@ -23,6 +23,7 @@
 		<link rel="stylesheet" href="https://media.azpm.org/ultralaser/css/bootstrap.min.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="https://media.azpm.org/ultralaser/css/ultralaser_min_AQxCM6w.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="https://media.azpm.org/ultralaser/css/audio.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="https://media.azpm.org/ultralaser/css/audioplayer-orig.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="https://media.azpm.org/ultralaser/css/azpmcharting.css" type="text/css" media="screen" />
 </head>
 
