--- a/libscampi/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
+++ b/libscampi/contrib/cms/newsengine/templates/admin/newsengine/article/change_form.html
@@ -15,8 +15,8 @@
     };
 
     jQuery(document).ready(function() {
-        var preview_url = "{% url admin:newsengine-article-preview %}";
-        var media_helper_url = "{% url admin:newsengine-article-media-helper %}";
+        var preview_url = "{% url 'admin:newsengine-article-preview' %}";
+        var media_helper_url = "{% url 'admin:newsengine-article-media-helper' %}";
         jQuery().ArticlePreview(preview_url); //simple plugin which generates preview button
         jQuery("input[name$='_inlines']").RenaissanceTagGenerator({'helper_url': media_helper_url}); //generates renaissance inline tags
 
@@ -30,6 +30,6 @@
         }
 
     });
-    
+
 </script>
 {% endblock %}
